--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,17 @@
-icewm -- authors file.  2023-12-28
+icewm -- authors file.  2024-03-07
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Sophie Leroy <sophie@stoquart.com>
+Author: Grace Yu <grace.yu@excel-gits.com>
+Author: Davide Aiello <davide.aiello@novilingulists.com>
+Author: Antonio Simón <antonio@trans-mission.com>
+Author: Eduard Bloch <blade@debian.org>
+Author: Gemineo <vistatec@gemineo.de>
+Author: Arnold Marko <atomicmind@yahoo.com>
+Author: Foo Bar <foobarcc@segfault.net>
+Author: Vik On <4o3lxdc1y@mozmail.com>
 Author: Petteri Aimonen <jpa@git.mail.kapsi.fi>
 Author: Dmitriy Khanzhin <jinn@altlinux.org>
-Author: Eduard Bloch <blade@debian.org>
 Author: Luiz Fernando Ranghetti <elchevive68@gmail.com>
 Author: diego roversi <diegor@tiscali.it>
 Author: gijsbers <gijsbers@users.noreply.github.com>
@@ -30,11 +38,6 @@ Author: neome <neome@posteo.me>
 Author: Moo oo <nazaq@protonmail.com>
 Author: Mohammad Rezaei Seresht <m.networking@gmail.com>
 Author: Yaron Shahrabani <sh.yaron@gmail.com>
-Author: Sophie Leroy <sophie@stoquart.com>
-Author: Gemineo <vistatec@gemineo.de>
-Author: Antonio Simón <antonio@trans-mission.com>
-Author: Grace Yu <grace.yu@excel-gits.com>
-Author: Davide Aiello <davide.aiello@novilingulists.com>
 Author: Baurzhan Muftakhidinov <baurthefirst@gmail.com>
 Author: Vincent Legoll <vincent.legoll@gmail.com>
 Author: Naveen <172697+naveensrinivasan@users.noreply.github.com>
